--- a/twitter_bot/.vscode/settings.json
+++ b/twitter_bot/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Bin\\Python37\\python.exe",
+    "python.pythonPath": "C:\\Users\\matsu\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
     "editor.wordWrapColumn": 700,
     "debug.console.wordWrap": false,
     "python.formatting.autopep8Args": [
